correction cataloge view

--- a/src/views/login.html
+++ b/src/views/login.html
@@ -15,7 +15,7 @@
             <div class="form-buttons">
                 <button type="submit">Ingresar</button>
                 <a href="/register">Registrarse</a>
-                <button type="submit" id="catalogoBtn">Catálogo</button>
+                <a href="/cataloge">Catálogo</a>
             </div>
         </form>
     </div>
